syntax = "proto3";

package monitoring;

option go_package = "./monitoringpb";

message HttpMetric {
    string http_method = 1;
    string http_route = 2;
    string original_url = 3;
    string http_status_code = 4;
    double duration_ms = 5;
    string instance = 6;
    int64 start_time_unix = 7;
    string request_headers = 8;
    string request_body = 9;
    string response_headers = 10;
    string response_body = 11;
    string error_message = 12;
}

message AckResponse {
    bool success = 1;
    string message = 2;
}

service MonitoringService {
    rpc SendHttpMetric (HttpMetric) returns (AckResponse);
}